[package]
name = "contact_lense_counter"
version = "0.1.0"
edition = "2024"

[dependencies]

chrono = { version = "0.4.41", features = ["serde"] }
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.143"
teloxide = { version = "0.17.0", features = ["macros"] }
pretty_env_logger = "0.5"
log = "0.4"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
